Add new stylesheet targeting _block--truck-primary-cta.scss: For newly added CITY/LOCATION added to CTA Buttons - add 'display: block' within small breakpoint range.

--- a/themes/custom/bodigiti/style/scss/styles.scss
+++ b/themes/custom/bodigiti/style/scss/styles.scss
@@ -34,6 +34,7 @@
 @import "components/block/block--locations-plus-maps";
 @import "components/block/block--logo";
 @import "components/block/block--saleschat";
+@import "components/block/block--truck-primary-cta";
 @import "components/breadcrumb/breadcrumb";
 @import "components/button/button--base";
 @import "components/button/button--overrides";
