CSS + block--Website-Accessibility: Adds stylesheet that targets new block 'Website Accessibility Policy'.

--- a/themes/custom/bodigiti/style/scss/styles.scss
+++ b/themes/custom/bodigiti/style/scss/styles.scss
@@ -35,6 +35,7 @@
 @import "components/block/block--logo";
 @import "components/block/block--saleschat";
 @import "components/block/block--truck-primary-cta";
+@import "components/block/block--website-accessibility";
 @import "components/breadcrumb/breadcrumb";
 @import "components/button/button--base";
 @import "components/button/button--overrides";
