--- a/themes/custom/bodigiti/templates/content/node--truck--full.html.twig
+++ b/themes/custom/bodigiti/templates/content/node--truck--full.html.twig
@@ -156,7 +156,7 @@
     <div id="node-secondary" name="node-secondary" class="clearfix">
     <div class="container">
       <h2 class="title">Detailed Specs</h2>
-      <table class="rwd-table grid-background three-max">
+      <table class="rwd-table__grid three-max">
         <tr class="odd">
           <td>
             <span class="label">Manufacturer</span>
