--- a/themes/custom/bodigiti/style/scss/components/table/_table--base.scss
+++ b/themes/custom/bodigiti/style/scss/components/table/_table--base.scss
@@ -3,31 +3,29 @@
 // Grid Table (alternating row colors - table used for truck-page details)
 ////////////////////////////////////////////////////////////////////////////////
 
-.rwd-table__grid {                                                                        
-	margin: 1rem 0;                                                                   
-	width: 100%;                                                                      
-	td {                                                                              
-		display: block;                                                                 
-		border: 1px solid gray;                                                         
-	}                                                                                 
-	th, td {                                                                          
-		text-align: left;                                                               
-		padding: .5rem 1rem !important;                                                 
-		@include breakpoint($med, true) {                                               
-			display: table-cell;                                                          
-		}                                                                               
-	}                                                                                 
-	.even {                                                                           
-		background-color: $gray3;                                                       
-		@include breakpoint($med, true) {                                               
-		}                                                                               
-	}                                                                                 
-	&.three-max td {                                                                  
-		@include breakpoint($med, true) {                                               
-			width: 33%                                                                    
-		}                                                                               
-	}                                                                                 
-}                                  
+.rwd-table__grid {
+	margin: 1rem 0;
+	width: 100%;
+	td {
+		display: block;
+		border: 1px solid gray;
+	}
+	th, td {
+		text-align: left;
+		padding: .5rem 1rem !important;
+		@include breakpoint($med, true) {
+			display: table-cell;
+		}
+	}
+	tr.even {
+		background-color: $gray3;
+	}
+	&.three-max td {
+		@include breakpoint($med, true) {
+			width: 33%
+		}
+	}
+}
 
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -37,18 +35,17 @@
 $breakpoint-alpha: $sm; // adjust to your needs
 
 .rwd-table {
-/*
-  tr {
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-  }
-*/ 
+  margin: 1rem 0;
+  min-width: 300px; // adjust to your needs
+  border-collapse: unset; // override normalize css
+  width: 100%;
+
   th[scope="col"] {
-    display: none; // for accessibility, use a visually hidden method here instead! Thanks, reddit!   
+    display: none; // for accessibility, use a visually hidden method here instead! Thanks, reddit!
   }
-  
+
   td, th[data-th] {
-    display: block; 
+    display: block;
     &:first-child {
       padding-top: .5rem;
     }
@@ -63,63 +60,56 @@ $breakpoint-alpha: $sm; // adjust to your needs
       width: 6.5rem; // magic number :( adjust according to your own content
       display: inline-block;
       // end options
-      
+
       @media (min-width: $breakpoint-alpha) {
         display: none;
       }
     }
   }
-  
-  th[scope="col"], td, th[data-th]  {
-    text-align: left;
-    
-    @media (min-width: $breakpoint-alpha) {
-      display: table-cell;
-      padding: .25rem .5rem;
-      
-      &:first-child {
-        padding-left: 0;
-      }
-      
-      &:last-child {
-        padding-right: 0;
-      }
-    }
-  }
+	th[scope="col"], td, th[data-th]  {
+		text-align: left;
+		@media (min-width: $breakpoint-alpha) {
+			display: table-cell;
+			padding: .25rem .5rem;
+
+			&:first-child {
+				padding-left: 0;
+			}
+			&:last-child {
+				padding-right: 0;
+			}
+		}
+	}
 }
 
 
 // presentational styling
 .rwd-table {
-  color: $color1;
-  overflow: hidden;
-	th[scope="col"], th[data-th], td[data-th] {
+	color: $color1;
+	overflow: hidden;
+	border: 1px solid $gray1;
+  th[scope="col"], th[data-th], td[data-th] {
 		color: $color1;
 	}
-  th[scope="col"], td, th[data-th] {
-    margin: .5rem 1rem;
-    @media (min-width: $breakpoint-alpha) { 
-      padding: 1rem !important; 
+	tr {
+    &.stripe {
+      background-color: $gray3;
     }
   }
-  th[scope="col"], th[data-th]:before, td:before {
- 		color: $color-link;
-  }
+	th[scope="col"], td, th[data-th] {
+		margin: .5rem 1rem;
+		@media (min-width: $breakpoint-alpha) {
+			padding: 1rem !important;
+		}
+	}
+	th[scope="col"], th[data-th]:before, td:before {
+		color: $color-link;
+	}
 	caption {
-	  background: $gray3;
-    color: $color1;
+		color: $color1;
 		padding: .1rem 1rem;
-    h1,h2,h3,p {
+		h1,h2,h3,p {
 			color: $color1;
-		}
-		&.header {	
-			border-radius: .4rem .4rem 0 0;
-			border-bottom: 1px solid gray;
-		}
-		&.footer {	
-			border-radius: 0 0 .4rem .4rem;
-			border-top: 1px solid gray;
 		}
 	}
 }
-
