Styles for new block 'alert-sitewide'.

--- a/themes/custom/bodigiti/style/scss/styles.scss
+++ b/themes/custom/bodigiti/style/scss/styles.scss
@@ -28,6 +28,7 @@
 
 /* Components */
 @import "components/block/block--all";
+@import "components/block/block--alert-sitewide";
 @import "components/block/block--action-callout-header";
 @import "components/block/block--footer-copyright";
 @import "components/block/block--local-info-nap";
