--- a/themes/custom/bodigiti/style/scss/components/block/_block--logo.scss
+++ b/themes/custom/bodigiti/style/scss/components/block/_block--logo.scss
@@ -16,13 +16,13 @@
   }
   @include breakpoint($sm-plus, true) {
     padding: 4px 0 0 8px;
-    padding: .25rem 0 0 .5rem;
+    padding: 1rem 0 0 .5rem;
     margin: 0 0 0 .5rem;
     float: left;
   }
   @include breakpoint($l, true) {
     padding: 4px 0 0 0;
-    padding: .25rem 0 0 0;
+    padding: 1rem 0 0 0;
     margin: 0;
   }
 }
