--- a/themes/custom/bodigiti/style/scss/components/region/_region--header.scss
+++ b/themes/custom/bodigiti/style/scss/components/region/_region--header.scss
@@ -11,7 +11,7 @@
     margin-bottom: 2rem;
     @include breakpoint($med, true) {
       padding: 24px 0 12px 0;
-      padding: .75rem 0 .5rem 0;
+      padding: 0;
       margin-bottom: 0;
     }
   }
