Header + Emergency Number: Decrease header-margin bottom from 2rem to .75rem for TABLET.

--- a/themes/custom/bodigiti/style/scss/components/region/_region--header.scss
+++ b/themes/custom/bodigiti/style/scss/components/region/_region--header.scss
@@ -8,7 +8,7 @@
     @include row;
     padding: 0 0 0px 0;
     padding: 0 0 0rem 0;
-    margin-bottom: 2rem;
+    margin-bottom: .75rem;
     @include breakpoint($med, true) {
       padding: 24px 0 12px 0;
       padding: 0;
