Social-icons Footer: Add block stylesheet to target social icons, apply styles to display block inline full width and center and margin-top and override siblings' float left styles, adjust region--footer accordingly.

--- a/themes/custom/bodigiti/style/scss/components/region/_region--footer.scss
+++ b/themes/custom/bodigiti/style/scss/components/region/_region--footer.scss
@@ -4,12 +4,14 @@
 ////////////////////////////////////////////////////
 
 #footer {
-  display: none;
-  @include breakpoint($med, true) {
-    display: block; 
+  nav {
+    display: none;
+    @include breakpoint($med, true) {
+      display: block; 
+    }
   }
   @include background-and-text($color6, $color2);
-  * {
+  h2, li {
     text-align: center;
     @include breakpoint($sm, true) {
       text-align: left; 
