--- a/themes/custom/bodigiti/style/scss/styles.scss
+++ b/themes/custom/bodigiti/style/scss/styles.scss
@@ -35,6 +35,7 @@
 @import "components/block/block--locations-plus-maps";
 @import "components/block/block--logo";
 @import "components/block/block--saleschat";
+@import "components/block/block--social-icons";
 @import "components/block/block--truck-primary-cta";
 @import "components/block/block--website-accessibility";
 @import "components/breadcrumb/breadcrumb";
